fix: Toolbar buttons too small on mobile.  Increased by 1 rem.

--- a/mapsed.css
+++ b/mapsed.css
@@ -206,9 +206,9 @@
 }
 
 .mapsed-toolbar-button {
-	font-size: 1.5rem;
-	width: 2.5rem; /* maps to the same size as Google's map icons (ish, about 40px) */
-	height: 2.5rem;
+	font-size: 3rem;
+	width: 5rem;
+	height: 5rem;
 }
 
 .gm-style-mtc > div {
